--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -9,46 +9,18 @@
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background-color: #000;
-    }
-
-  .gradient-frame {
-  padding: 5px 15px 0;
-  background: linear-gradient(
-    to bottom right,
-    #06954E 0%,
-    #064D95 33%,
-    #950606 66%
-  );
-  border-radius: 25px;
-}
-
-    .container {
-      padding: 20px;
-      border-radius: 25px;
-      max-width: 700px;
-      margin: 0 auto;
-    }
-
-    .red-room .container {
-      background-color: #950606;
-    }
-
-    .green-room .container {
-      background-color: #06954E;
-    }
-
-    .blue-room .container {
       background-color: #064D95;
     }
 
+    .logo-section {
+      background-color: #064D95;
+      padding: 20px 0;
+      text-align: center;
+    }
+
     .logo-img {
-      display: block;
-      margin: 0 auto;
       max-width: 125px;
       height: auto;
-      padding-top: 20px;
-      padding-bottom: 10px;
     }
 
     .page-title {
@@ -61,7 +33,6 @@
       font-style: italic;
       font-family: 'Poppins', sans-serif;
       color: white;
-      text-align: center;
       text-shadow: 0 0 8px #ff00ff, 0 0 12px #ff00ff;
       line-height: 1.1;
       margin-bottom: 10px;
@@ -92,13 +63,22 @@
     .green-btn a { background-color: #06954E; }
     .red-btn a { background-color: #950606; }
 
+    .room-section {
+      padding: 40px 20px;
+    }
+
+    .red-room { background-color: #950606; }
+    .green-room { background-color: #06954E; }
+    .blue-room { background-color: #064D95; }
+
     .archetype-card {
       margin: 40px auto;
       text-align: center;
+      max-width: 700px;
     }
 
     .image-container {
-      border: 4px solid gold;
+      border: 4px solid #FFD700;
       border-radius: 12px;
       overflow: hidden;
       display: inline-block;
@@ -108,15 +88,11 @@
 
     .image-pair {
       display: flex;
-      height: 240px;
-      position: relative;
-      user-select: none;
-      pointer-events: none;
+      height: auto;
     }
 
     .image-pair img {
       width: 50%;
-      height: 100%;
       object-fit: cover;
       display: block;
       pointer-events: none;
@@ -125,8 +101,7 @@
 
     .divider {
       width: 4px;
-      background-color: gold;
-      height: 100%;
+      background-color: #FFD700;
     }
 
     .slogan {
@@ -142,7 +117,7 @@
     }
 
     h3 a {
-      color: gold;
+      color: #FFD700;
       text-decoration: none;
       font-size: 1.4rem;
     }
@@ -153,196 +128,176 @@
   </style>
 </head>
 <body>
-  <div class="gradient-frame">
+<div class="logo-section">
+  <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo-img" />
+</div>
 
-    <!-- Logo + Title Section -->
-    <div class="red-room">
-      <div class="container">
-        <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo-img" />
-        <div class="page-title">
-          <h1>Sexual Profiles</h1>
-        </div>
-        <div class="find-type-btn red-btn">
-          <a href="index.html">Find Your Type</a>
-        </div>
-
-        <!-- RED ROOM ARCHETYPES -->
-        <!-- Dungeon Master -->
-        <div class="archetype-card">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female">
-              <div class="divider"></div>
-              <img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male">
-            </div>
-          </div>
-          <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
-          <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
-        </div>
-
-        <!-- Claimed & Trained -->
-        <div class="archetype-card">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/claimed__trained_female.jpg" alt="Claimed & Trained - Female">
-              <div class="divider"></div>
-              <img src="images/claimed__trained_male.jpg" alt="Claimed & Trained - Male">
-            </div>
-          </div>
-          <h3><a href="claimed-and-trained.html">Claimed & Trained</a></h3>
-          <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
-        </div>
-
-        <!-- The Provoker -->
-        <div class="archetype-card">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/the_provoker_female.jpg" alt="The Provoker - Female">
-              <div class="divider"></div>
-              <img src="images/the_provoker_male.jpg" alt="The Provoker - Male">
-            </div>
-          </div>
-          <h3><a href="the-provoker.html">The Provoker</a></h3>
-          <p class="slogan">You press buttons—on purpose.</p>
-        </div>
-
-        <!-- The Punish Me -->
-        <div class="archetype-card">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female">
-              <div class="divider"></div>
-              <img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male">
-            </div>
-          </div>
-          <h3><a href="the-punish-me.html">The Punish Me</a></h3>
-          <p class="slogan">What you call defiance, I call foreplay.</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- GREEN ROOM -->
-    <div class="green-room">
-      <div class="container">
-        <div class="find-type-btn green-btn">
-          <a href="index.html">Find Your Type</a>
-        </div>
-
-        <!-- Charmer in Charge -->
-        <div class="archetype-card">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female">
-              <div class="divider"></div>
-              <img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male">
-            </div>
-          </div>
-          <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
-          <p class="slogan">You don’t just take control. You make them beg for it.</p>
-        </div>
-
-        <!-- Promiscuous Plaything -->
-        <div class="archetype-card">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female">
-              <div class="divider"></div>
-              <img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male">
-            </div>
-          </div>
-          <h3><a href="promiscuous-plaything.html">Promiscuous Plaything</a></h3>
-          <p class="slogan">Are you ready for a wild ride!</p>
-        </div>
-
-        <!-- Bedroom Adventurer -->
-        <div class="archetype-card">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female">
-              <div class="divider"></div>
-              <img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male">
-            </div>
-          </div>
-          <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
-          <p class="slogan">I'm up for anything and down to get down and dirty.</p>
-        </div>
-
-        <!-- Generous Giver -->
-        <div class="archetype-card">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/generous_giver_female.jpg" alt="Generous Giver - Female">
-              <div class="divider"></div>
-              <img src="images/generous_giver_male.jpg" alt="Generous Giver - Male">
-            </div>
-          </div>
-          <h3><a href="generous-giver.html">Generous Giver</a></h3>
-          <p class="slogan">You have so much to give, you just need someone to give it to.</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- BLUE ROOM -->
-    <div class="blue-room">
-      <div class="container">
-        <div class="find-type-btn blue-btn">
-          <a href="index.html">Find Your Type</a>
-        </div>
-
-        <!-- Tender Protector -->
-        <div class="archetype-card">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/tender_protector_female.jpg" alt="Tender Protector - Female">
-              <div class="divider"></div>
-              <img src="images/tender_protector_male.jpg" alt="Tender Protector - Male">
-            </div>
-          </div>
-          <h3><a href="tender-protector.html">Tender Protector</a></h3>
-          <p class="slogan">You lead with gravity, not volume.</p>
-        </div>
-
-        <!-- Devoted Darling -->
-        <div class="archetype-card">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female">
-              <div class="divider"></div>
-              <img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male">
-            </div>
-          </div>
-          <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
-          <p class="slogan">Nothing is as kinky as loyalty.</p>
-        </div>
-
-        <!-- Heatwave -->
-        <div class="archetype-card">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/heatwave_female.jpg" alt="Heatwave - Female">
-              <div class="divider"></div>
-              <img src="images/heatwave_male.jpg" alt="Heatwave - Male">
-            </div>
-          </div>
-          <h3><a href="heatwave.html">Heatwave</a></h3>
-          <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
-        </div>
-
-        <!-- Mood Multiplier -->
-        <div class="archetype-card">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female">
-              <div class="divider"></div>
-              <img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male">
-            </div>
-          </div>
-          <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
-          <p class="slogan">You match their vibe—and raise it.</p>
-        </div>
-      </div>
-    </div>
-
+<!-- RED ROOM -->
+<div class="red-room room-section">
+  <div class="page-title">
+    <h1>Sexual Profiles</h1>
   </div>
+  <div class="find-type-btn red-btn">
+    <a href="index.html">Find Your Type</a>
+  </div>
+
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <img src="images/claimed__trained_female.jpg" alt="Claimed & Trained - Female">
+        <div class="divider"></div>
+        <img src="images/claimed__trained_male.jpg" alt="Claimed & Trained - Male">
+      </div>
+    </div>
+    <h3><a href="claimed-and-trained.html">Claimed & Trained</a></h3>
+    <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
+  </div>
+
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female">
+        <div class="divider"></div>
+        <img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male">
+      </div>
+    </div>
+    <h3><a href="the-punish-me.html">The Punish Me</a></h3>
+    <p class="slogan">What you call defiance, I call foreplay.</p>
+  </div>
+
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <img src="images/the_provoker_female.jpg" alt="The Provoker - Female">
+        <div class="divider"></div>
+        <img src="images/the_provoker_male.jpg" alt="The Provoker - Male">
+      </div>
+    </div>
+    <h3><a href="the-provoker.html">The Provoker</a></h3>
+    <p class="slogan">You press buttons—on purpose.</p>
+  </div>
+
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female">
+        <div class="divider"></div>
+        <img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male">
+      </div>
+    </div>
+    <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
+    <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
+  </div>
+</div>
+<!-- GREEN ROOM -->
+<div class="green-room room-section">
+  <div class="find-type-btn green-btn">
+    <a href="index.html">Find Your Type</a>
+  </div>
+
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female">
+        <div class="divider"></div>
+        <img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male">
+      </div>
+    </div>
+    <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
+    <p class="slogan">You don’t just take control. You make them beg for it.</p>
+  </div>
+
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female">
+        <div class="divider"></div>
+        <img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male">
+      </div>
+    </div>
+    <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
+    <p class="slogan">I'm up for anything and down to get down and dirty.</p>
+  </div>
+
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female">
+        <div class="divider"></div>
+        <img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male">
+      </div>
+    </div>
+    <h3><a href="promiscuous-plaything.html">Promiscuous Plaything</a></h3>
+    <p class="slogan">Are you ready for a wild ride!</p>
+  </div>
+
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <img src="images/generous_giver_female.jpg" alt="Generous Giver - Female">
+        <div class="divider"></div>
+        <img src="images/generous_giver_male.jpg" alt="Generous Giver - Male">
+      </div>
+    </div>
+    <h3><a href="generous-giver.html">Generous Giver</a></h3>
+    <p class="slogan">You have so much to give, you just need someone to give it to.</p>
+  </div>
+</div>
+
+<!-- BLUE ROOM -->
+<div class="blue-room room-section">
+  <div class="find-type-btn blue-btn">
+    <a href="index.html">Find Your Type</a>
+  </div>
+
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <img src="images/tender_protector_female.jpg" alt="Tender Protector - Female">
+        <div class="divider"></div>
+        <img src="images/tender_protector_male.jpg" alt="Tender Protector - Male">
+      </div>
+    </div>
+    <h3><a href="tender-protector.html">Tender Protector</a></h3>
+    <p class="slogan">You lead with gravity, not volume.</p>
+  </div>
+
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female">
+        <div class="divider"></div>
+        <img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male">
+      </div>
+    </div>
+    <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
+    <p class="slogan">Nothing is as kinky as loyalty.</p>
+  </div>
+
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <img src="images/heatwave_female.jpg" alt="Heatwave - Female">
+        <div class="divider"></div>
+        <img src="images/heatwave_male.jpg" alt="Heatwave - Male">
+      </div>
+    </div>
+    <h3><a href="heatwave.html">Heatwave</a></h3>
+    <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
+  </div>
+
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female">
+        <div class="divider"></div>
+        <img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male">
+      </div>
+    </div>
+    <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
+    <p class="slogan">You match their vibe—and raise it.</p>
+  </div>
+</div>
+
 </body>
 </html>
