--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -9,12 +9,15 @@
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background-color: #064D95;
+      background-color: black;
     }
 
-    .logo-section {
-      background-color: #064D95;
-      padding: 20px 0;
+    .header-bar {
+      background-color: black;
+      border-top: 5px solid white;
+      border-left: 5px solid white;
+      border-right: 5px solid white;
+      padding: 10px 15px 0px;
       text-align: center;
     }
 
@@ -23,19 +26,37 @@
       height: auto;
     }
 
-    .page-title {
-      text-align: center;
+    .title-bar {
+      background-color: black;
+      border-left: 5px solid white;
+      border-right: 5px solid white;
+      padding-bottom: 10px;
       padding-top: 10px;
+      text-align: center;
     }
 
-    .page-title h1 {
+    .title-bar h1 {
       font-size: 2.6rem;
       font-style: italic;
       font-family: 'Poppins', sans-serif;
       color: white;
+      text-align: center;
       text-shadow: 0 0 8px #ff00ff, 0 0 12px #ff00ff;
-      line-height: 1.1;
-      margin-bottom: 10px;
+      margin: 0;
+    }
+
+    .section {
+      padding: 20px 0;
+    }
+
+    .blue-room { background-color: #064D95; }
+    .green-room { background-color: #06954E; }
+    .red-room { background-color: #950606; }
+
+    .container {
+      max-width: 700px;
+      margin: auto;
+      padding: 20px 20px 40px;
     }
 
     .find-type-btn {
@@ -55,26 +76,13 @@
       display: inline-block;
     }
 
-    .find-type-btn a:hover {
-      transform: scale(1.05);
-    }
-
     .blue-btn a { background-color: #064D95; }
     .green-btn a { background-color: #06954E; }
     .red-btn a { background-color: #950606; }
 
-    .room-section {
-      padding: 40px 20px;
-    }
-
-    .red-room { background-color: #950606; }
-    .green-room { background-color: #06954E; }
-    .blue-room { background-color: #064D95; }
-
     .archetype-card {
       margin: 40px auto;
       text-align: center;
-      max-width: 700px;
     }
 
     .image-container {
@@ -88,20 +96,24 @@
 
     .image-pair {
       display: flex;
-      height: auto;
+      height: 240px;
+      position: relative;
     }
 
     .image-pair img {
       width: 50%;
+      height: 100%;
       object-fit: cover;
       display: block;
       pointer-events: none;
+      -webkit-user-select: none;
       user-select: none;
     }
 
     .divider {
       width: 4px;
       background-color: #FFD700;
+      height: 100%;
     }
 
     .slogan {
@@ -128,174 +140,182 @@
   </style>
 </head>
 <body>
-<div class="logo-section">
+
+<div class="header-bar">
   <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo-img" />
 </div>
 
-<!-- RED ROOM -->
-<div class="red-room room-section">
-  <div class="page-title">
-    <h1>Sexual Profiles</h1>
-  </div>
-  <div class="find-type-btn red-btn">
-    <a href="index.html">Find Your Type</a>
-  </div>
-
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/claimed__trained_female.jpg" alt="Claimed & Trained - Female">
-        <div class="divider"></div>
-        <img src="images/claimed__trained_male.jpg" alt="Claimed & Trained - Male">
-      </div>
-    </div>
-    <h3><a href="claimed-and-trained.html">Claimed & Trained</a></h3>
-    <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
-  </div>
-
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female">
-        <div class="divider"></div>
-        <img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male">
-      </div>
-    </div>
-    <h3><a href="the-punish-me.html">The Punish Me</a></h3>
-    <p class="slogan">What you call defiance, I call foreplay.</p>
-  </div>
-
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/the_provoker_female.jpg" alt="The Provoker - Female">
-        <div class="divider"></div>
-        <img src="images/the_provoker_male.jpg" alt="The Provoker - Male">
-      </div>
-    </div>
-    <h3><a href="the-provoker.html">The Provoker</a></h3>
-    <p class="slogan">You press buttons—on purpose.</p>
-  </div>
-
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female">
-        <div class="divider"></div>
-        <img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male">
-      </div>
-    </div>
-    <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
-    <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
-  </div>
-</div>
-<!-- GREEN ROOM -->
-<div class="green-room room-section">
-  <div class="find-type-btn green-btn">
-    <a href="index.html">Find Your Type</a>
-  </div>
-
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female">
-        <div class="divider"></div>
-        <img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male">
-      </div>
-    </div>
-    <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
-    <p class="slogan">You don’t just take control. You make them beg for it.</p>
-  </div>
-
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female">
-        <div class="divider"></div>
-        <img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male">
-      </div>
-    </div>
-    <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
-    <p class="slogan">I'm up for anything and down to get down and dirty.</p>
-  </div>
-
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female">
-        <div class="divider"></div>
-        <img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male">
-      </div>
-    </div>
-    <h3><a href="promiscuous-plaything.html">Promiscuous Plaything</a></h3>
-    <p class="slogan">Are you ready for a wild ride!</p>
-  </div>
-
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/generous_giver_female.jpg" alt="Generous Giver - Female">
-        <div class="divider"></div>
-        <img src="images/generous_giver_male.jpg" alt="Generous Giver - Male">
-      </div>
-    </div>
-    <h3><a href="generous-giver.html">Generous Giver</a></h3>
-    <p class="slogan">You have so much to give, you just need someone to give it to.</p>
-  </div>
+<div class="title-bar">
+  <h1>Sexual Profiles</h1>
 </div>
 
 <!-- BLUE ROOM -->
-<div class="blue-room room-section">
-  <div class="find-type-btn blue-btn">
-    <a href="index.html">Find Your Type</a>
-  </div>
-
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/tender_protector_female.jpg" alt="Tender Protector - Female">
-        <div class="divider"></div>
-        <img src="images/tender_protector_male.jpg" alt="Tender Protector - Male">
-      </div>
+<div class="section blue-room">
+  <div class="container">
+    <div class="find-type-btn blue-btn">
+      <a href="index.html">Find Your Type</a>
     </div>
-    <h3><a href="tender-protector.html">Tender Protector</a></h3>
-    <p class="slogan">You lead with gravity, not volume.</p>
-  </div>
 
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female">
-        <div class="divider"></div>
-        <img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male">
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/tender_protector_female.jpg" alt="Tender Protector - Female">
+          <div class="divider"></div>
+          <img src="images/tender_protector_male.jpg" alt="Tender Protector - Male">
+        </div>
       </div>
+      <h3><a href="tender-protector.html">Tender Protector</a></h3>
+      <p class="slogan">You lead with gravity, not volume.</p>
     </div>
-    <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
-    <p class="slogan">Nothing is as kinky as loyalty.</p>
-  </div>
 
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/heatwave_female.jpg" alt="Heatwave - Female">
-        <div class="divider"></div>
-        <img src="images/heatwave_male.jpg" alt="Heatwave - Male">
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female">
+          <div class="divider"></div>
+          <img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male">
+        </div>
       </div>
+      <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
+      <p class="slogan">Nothing is as kinky as loyalty.</p>
     </div>
-    <h3><a href="heatwave.html">Heatwave</a></h3>
-    <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
-  </div>
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/heatwave_female.jpg" alt="Heatwave - Female">
+          <div class="divider"></div>
+          <img src="images/heatwave_male.jpg" alt="Heatwave - Male">
+        </div>
+      </div>
+      <h3><a href="heatwave.html">Heatwave</a></h3>
+      <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
+    </div>
 
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female">
-        <div class="divider"></div>
-        <img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male">
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female">
+          <div class="divider"></div>
+          <img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male">
+        </div>
       </div>
+      <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
+      <p class="slogan">You match their vibe—and raise it.</p>
     </div>
-    <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
-    <p class="slogan">You match their vibe—and raise it.</p>
+  </div>
+</div>
+
+<!-- GREEN ROOM -->
+<div class="section green-room">
+  <div class="container">
+    <div class="find-type-btn green-btn">
+      <a href="index.html">Find Your Type</a>
+    </div>
+
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female">
+          <div class="divider"></div>
+          <img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male">
+        </div>
+      </div>
+      <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
+      <p class="slogan">You don’t just take control. You make them beg for it.</p>
+    </div>
+
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female">
+          <div class="divider"></div>
+          <img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male">
+        </div>
+      </div>
+      <h3><a href="promiscuous-plaything.html">Promiscuous Plaything</a></h3>
+      <p class="slogan">Are you ready for a wild ride!</p>
+    </div>
+
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female">
+          <div class="divider"></div>
+          <img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male">
+        </div>
+      </div>
+      <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
+      <p class="slogan">I'm up for anything and down to get down and dirty.</p>
+    </div>
+
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/generous_giver_female.jpg" alt="Generous Giver - Female">
+          <div class="divider"></div>
+          <img src="images/generous_giver_male.jpg" alt="Generous Giver - Male">
+        </div>
+      </div>
+      <h3><a href="generous-giver.html">Generous Giver</a></h3>
+      <p class="slogan">You have so much to give, you just need someone to give it to.</p>
+    </div>
+  </div>
+</div>
+
+<!-- RED ROOM -->
+<div class="section red-room">
+  <div class="container">
+    <div class="find-type-btn red-btn">
+      <a href="index.html">Find Your Type</a>
+    </div>
+
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female">
+          <div class="divider"></div>
+          <img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male">
+        </div>
+      </div>
+      <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
+      <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
+    </div>
+
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/claimed__trained_female.jpg" alt="Claimed & Trained - Female">
+          <div class="divider"></div>
+          <img src="images/claimed__trained_male.jpg" alt="Claimed & Trained - Male">
+        </div>
+      </div>
+      <h3><a href="claimed-and-trained.html">Claimed & Trained</a></h3>
+      <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
+    </div>
+
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/the_provoker_female.jpg" alt="The Provoker - Female">
+          <div class="divider"></div>
+          <img src="images/the_provoker_male.jpg" alt="The Provoker - Male">
+        </div>
+      </div>
+      <h3><a href="the-provoker.html">The Provoker</a></h3>
+      <p class="slogan">You press buttons—on purpose.</p>
+    </div>
+
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female">
+          <div class="divider"></div>
+          <img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male">
+        </div>
+      </div>
+      <h3><a href="the-punish-me.html">The Punish Me</a></h3>
+      <p class="slogan">What you call defiance, I call foreplay.</p>
+    </div>
   </div>
 </div>
 
